--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       </div>
     </header>
     <main>
-      <section class="title_section">
+      <!-- <section class="title_section">
         <div class="container title-container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn" type="button">Order Service</button>
         </div>
-      </section>
-      <section class="advantages_section section">
+      </section> -->
+      <!-- <section class="advantages_section section">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-container">
@@ -106,8 +106,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="our_team section">
+      </section> -->
+      <!-- <section class="our_team section">
         <div class="container">
           <h2 class="title_two">Our Team</h2>
           <ul class="team_name-container">
@@ -349,8 +349,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section">
+      </section> -->
+      <!-- <section class="section">
         <div class="container">
           <h2 class="title_two">Our Portfolio</h2>
 
@@ -471,9 +471,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="logo-footer-container">
           <a class="logo logo-footer" href="./index.html"
@@ -554,10 +554,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Backdrop -->
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -641,6 +641,6 @@
           <button class="btn" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
