--- a/index.html
+++ b/index.html
@@ -49,15 +49,92 @@
           </svg>
         </button>
       </div>
+      <div class="mobile-menu">
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close" type="button">
+            <svg class="modal-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-link-nav">
+              <li><a class="mobile-link" href="./index.html">Studio</a></li>
+              <li><a class="mobile-link" href="">Portfolio</a></li>
+              <li><a class="mobile-link" href="">Contacts</a></li>
+            </ul>
+          </nav>
+          <address class="mobile-menu-address">
+            <ul class="mobile-link-address">
+              <li>
+                <a class="mobile-link_contacts" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a class="mobile-link_contacts" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-social-links">
+            <li class="mobile-social-links-icon">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="mobile-link-icon"
+              >
+                <svg class="mobile-icon" height="24" width="24" fill="none">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="mobile-social-links-icon">
+              <a
+                href="https://www.twitter.com/"
+                target="_blank"
+                class="mobile-link-icon"
+              >
+                <svg class="mobile-icon" height="24" width="24" fill="none">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-links-icon">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="mobile-link-icon"
+              >
+                <svg class="mobile-icon" height="24" width="24" fill="none">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-links-icon">
+              <a
+                href="https://www.linkedin.com/"
+                target="_blank"
+                class="mobile-link-icon"
+              >
+                <svg class="mobile-icon" height="24" width="24" fill="none">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
     <main>
-      <!-- <section class="title_section">
+      <section class="title_section">
         <div class="container title-container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn" type="button">Order Service</button>
         </div>
-      </section> -->
-      <!-- <section class="advantages_section section">
+      </section>
+      <section class="advantages_section section">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-container">
@@ -111,7 +188,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="our_team section">
         <div class="container">
           <h2 class="title_two">Our Team</h2>
