--- a/index.html
+++ b/index.html
@@ -189,12 +189,13 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="our_team section">
-        <div class="container">
+      <section class="our_team section">
+        <div class="container other-container">
           <h2 class="title_two">Our Team</h2>
           <ul class="team_name-container">
             <li class="team_name">
               <img
+                srcset="./images/mark.jpg 1x, ./images/mark@2x.jpg 2x"
                 src="./images/mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -254,6 +255,7 @@
             </li>
             <li class="team_name">
               <img
+                srcset="./images/tom.jpg 1x, ./images/tom@2x.jpg 2x"
                 src="./images/tom.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -313,6 +315,7 @@
             </li>
             <li class="team_name">
               <img
+                srcset="./images/camila.jpg 1x, ./images/camila@2x.jpg 2x"
                 src="./images/camila.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -372,6 +375,7 @@
             </li>
             <li class="team_name">
               <img
+                srcset="./images/daniel.jpg 1x, ./images/daniel@2x.jpg 2x"
                 src="./images/daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -431,7 +435,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="section">
         <div class="container">
           <h2 class="title_two">Our Portfolio</h2>
