--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="title_two">Our Portfolio</h2>
 
@@ -444,6 +444,11 @@
             <li class="portfolio-li">
               <div class="overlay">
                 <img
+                  class="img_portfolio"
+                  srcset="
+                    ./images/banking_app.jpg    1x,
+                    ./images/banking_app@2x.jpg 2x
+                  "
                   src="./images/banking_app.jpg"
                   alt="Banking app"
                   width="360"
@@ -456,13 +461,18 @@
                 </p>
               </div>
               <div class="app-container">
-                <h3 class="title_three">Banking App</h3>
+                <h3 class="title_three title-app">Banking App</h3>
                 <p class="txt_main txt_portfolio">App</p>
               </div>
             </li>
             <li class="portfolio-li">
               <div class="overlay">
                 <img
+                  class="img_portfolio"
+                  srcset="
+                    ./images/cashless_payment.jpg    1x,
+                    ./images/cashless_payment@2x.jpg 2x
+                  "
                   src="./images/cashless_payment.jpg"
                   alt="Cashless payment"
                   width="360"
@@ -475,13 +485,18 @@
                 </p>
               </div>
               <div class="app-container">
-                <h3 class="title_three">Cashless Payment</h3>
+                <h3 class="title_three title-app">Cashless Payment</h3>
                 <p class="txt_main txt_portfolio">Marketing</p>
               </div>
             </li>
             <li class="portfolio-li">
               <div class="overlay">
                 <img
+                  class="img_portfolio"
+                  srcset="
+                    ./images/meditation_app.jpg    1x,
+                    ./images/meditation_app@2x.jpg 2x
+                  "
                   src="./images/meditation_app.jpg"
                   alt="Meditation app"
                   width="360"
@@ -494,13 +509,18 @@
                 </p>
               </div>
               <div class="app-container">
-                <h3 class="title_three">Meditation App</h3>
+                <h3 class="title_three title-app">Meditation App</h3>
                 <p class="txt_main txt_portfolio">App</p>
               </div>
             </li>
             <li class="portfolio-li">
               <div class="overlay">
                 <img
+                  class="img_portfolio"
+                  srcset="
+                    ./images/taxi_service.jpg    1x,
+                    ./images/taxi_service@2x.jpg 2x
+                  "
                   src="./images/taxi_service.jpg"
                   alt="Taxi service"
                   width="360"
@@ -513,13 +533,18 @@
                 </p>
               </div>
               <div class="app-container">
-                <h3 class="title_three">Taxi Service</h3>
+                <h3 class="title_three title-app">Taxi Service</h3>
                 <p class="txt_main txt_portfolio">Marketing</p>
               </div>
             </li>
             <li class="portfolio-li">
               <div class="overlay">
                 <img
+                  class="img_portfolio"
+                  srcset="
+                    ./images/screen_illustrations.jpg    1x,
+                    ./images/screen_illustrations@2x.jpg 2x
+                  "
                   src="./images/screen_illustrations.jpg"
                   alt="Screen illustrations"
                   width="360"
@@ -532,13 +557,18 @@
                 </p>
               </div>
               <div class="app-container">
-                <h3 class="title_three">Screen Illustrations</h3>
+                <h3 class="title_three title-app">Screen Illustrations</h3>
                 <p class="txt_main txt_portfolio">Design</p>
               </div>
             </li>
             <li class="portfolio-li">
               <div class="overlay">
                 <img
+                  class="img_portfolio"
+                  srcset="
+                    ./images/online_courses.jpg    1x,
+                    ./images/online_courses@2x.jpg 2x
+                  "
                   src="./images/online_courses.jpg"
                   alt="Online courses"
                   width="360"
@@ -551,13 +581,13 @@
                 </p>
               </div>
               <div class="app-container">
-                <h3 class="title_three">Online Courses</h3>
+                <h3 class="title_three title-app">Online Courses</h3>
                 <p class="txt_main txt_portfolio">Marketing</p>
               </div>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container footer-container">
