--- a/index.html
+++ b/index.html
@@ -443,17 +443,35 @@
           <ul class="portfolio_container">
             <li class="portfolio-li">
               <div class="overlay">
-                <img
-                  class="img_portfolio"
-                  srcset="
-                    ./images/banking_app.jpg    1x,
-                    ./images/banking_app@2x.jpg 2x
-                  "
-                  src="./images/banking_app.jpg"
-                  alt="Banking app"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/banking_app.jpg    1x,
+                      ./images/banking_app@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/tablet-banking_app.jpg    1x,
+                      ./images/tablet/tablet-banking_app@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/mobile-banking_app.jpg    1x,
+                      ./images/mobile/mobile-banking_app@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="img_portfolio"
+                    src="./images/banking_app.jpg"
+                    alt="Banking app"
+                  />
+                </picture>
+
                 <p class="overlay-txt">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -467,17 +485,39 @@
             </li>
             <li class="portfolio-li">
               <div class="overlay">
-                <img
-                  class="img_portfolio"
-                  srcset="
-                    ./images/cashless_payment.jpg    1x,
-                    ./images/cashless_payment@2x.jpg 2x
-                  "
-                  src="./images/cashless_payment.jpg"
-                  alt="Cashless payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/cashless_payment.jpg    1x,
+                      ./images/cashless_payment@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/tablet-cashless_payment.jpg    1x,
+                      ./images/tablet/tablet-cashless_payment@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/mobile-cashless_payment.jpg    1x,
+                      ./images/mobile/mobile-cashless_payment@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="img_portfolio"
+                    srcset="
+                      ./images/cashless_payment.jpg    1x,
+                      ./images/cashless_payment@2x.jpg 2x
+                    "
+                    src="./images/cashless_payment.jpg"
+                    alt="Cashless payment"
+                  />
+                </picture>
+
                 <p class="overlay-txt">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -491,17 +531,39 @@
             </li>
             <li class="portfolio-li">
               <div class="overlay">
-                <img
-                  class="img_portfolio"
-                  srcset="
-                    ./images/meditation_app.jpg    1x,
-                    ./images/meditation_app@2x.jpg 2x
-                  "
-                  src="./images/meditation_app.jpg"
-                  alt="Meditation app"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/meditation_app.jpg    1x,
+                      ./images/meditation_app@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/tablet-meditation_app.jpg    1x,
+                      ./images/tablet/tablet-meditation_app@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/mobile-meditation_app.jpg    1x,
+                      ./images/mobile/mobile-meditation_app@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="img_portfolio"
+                    srcset="
+                      ./images/meditation_app.jpg    1x,
+                      ./images/meditation_app@2x.jpg 2x
+                    "
+                    src="./images/meditation_app.jpg"
+                    alt="Meditation app"
+                  />
+                </picture>
+
                 <p class="overlay-txt">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -515,17 +577,39 @@
             </li>
             <li class="portfolio-li">
               <div class="overlay">
-                <img
-                  class="img_portfolio"
-                  srcset="
-                    ./images/taxi_service.jpg    1x,
-                    ./images/taxi_service@2x.jpg 2x
-                  "
-                  src="./images/taxi_service.jpg"
-                  alt="Taxi service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/taxi_service.jpg    1x,
+                      ./images/taxi_service@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/tablet-taxi_service.jpg    1x,
+                      ./images/tablet/tablet-taxi_service@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/mobile-taxi_service.jpg    1x,
+                      ./images/mobile/mobile-taxi_service@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="img_portfolio"
+                    srcset="
+                      ./images/taxi_service.jpg    1x,
+                      ./images/taxi_service@2x.jpg 2x
+                    "
+                    src="./images/taxi_service.jpg"
+                    alt="Taxi service"
+                  />
+                </picture>
+
                 <p class="overlay-txt">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -539,17 +623,35 @@
             </li>
             <li class="portfolio-li">
               <div class="overlay">
-                <img
-                  class="img_portfolio"
-                  srcset="
-                    ./images/screen_illustrations.jpg    1x,
-                    ./images/screen_illustrations@2x.jpg 2x
-                  "
-                  src="./images/screen_illustrations.jpg"
-                  alt="Screen illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/screen_illustrations.jpg    1x,
+                      ./images/screen_illustrations@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/tablet-screen_illustrations.jpg    1x,
+                      ./images/tablet/tablet-screen_illustrations@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/mobile-screen_illustrations.jpg    1x,
+                      ./images/mobile/mobile-screen_illustrations@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="img_portfolio"
+                    src="./images/screen_illustrations.jpg"
+                    alt="Screen illustrations"
+                  />
+                </picture>
+
                 <p class="overlay-txt">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -563,17 +665,39 @@
             </li>
             <li class="portfolio-li">
               <div class="overlay">
-                <img
-                  class="img_portfolio"
-                  srcset="
-                    ./images/online_courses.jpg    1x,
-                    ./images/online_courses@2x.jpg 2x
-                  "
-                  src="./images/online_courses.jpg"
-                  alt="Online courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/online_courses.jpg    1x,
+                      ./images/online_courses@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/tablet-online_courses.jpg    1x,
+                      ./images/tablet/tablet-online_courses@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/mobile-online_courses.jpg    1x,
+                      ./images/mobile/mobile-online_courses@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="img_portfolio"
+                    srcset="
+                      ./images/online_courses.jpg    1x,
+                      ./images/online_courses@2x.jpg 2x
+                    "
+                    src="./images/online_courses.jpg"
+                    alt="Online courses"
+                  />
+                </picture>
+
                 <p class="overlay-txt">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
