--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="logo-footer-container">
           <a class="logo logo-footer" href="./index.html"
@@ -794,10 +794,10 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Backdrop -->
-    <!-- <div class="backdrop is-open">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -881,6 +881,6 @@
           <button class="btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
