--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu">
+      <div class="mobile-menu is-open">
         <div class="container mobile-menu-container">
           <button class="mobile-menu-close" type="button">
             <svg class="modal-close-icon" width="8" height="8">
@@ -58,7 +58,11 @@
           </button>
           <nav class="mobile-menu-nav">
             <ul class="mobile-link-nav">
-              <li><a class="mobile-link" href="./index.html">Studio</a></li>
+              <li>
+                <a class="mobile-link mobile-color-studio" href="./index.html"
+                  >Studio</a
+                >
+              </li>
               <li><a class="mobile-link" href="">Portfolio</a></li>
               <li><a class="mobile-link" href="">Contacts</a></li>
             </ul>
@@ -66,7 +70,9 @@
           <address class="mobile-menu-address">
             <ul class="mobile-link-address">
               <li>
-                <a class="mobile-link_contacts" href="tel:+110001111111"
+                <a
+                  class="mobile-link_contacts mobile-color-tel"
+                  href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
@@ -797,7 +803,7 @@
     </footer>
 
     <!-- Backdrop -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
